--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://YaroslavBoldyshev.github.io/goit-js-hw-100",
+  "homepage": "https://MarkSavkaIt.github.io/test-10-js",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /goit-js-hw-100/"
+    "build": "parcel build src/*.html --public-url /test-10-js/"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/YaroslavBoldyshev/goit-js-hw-100.git"
+    "url": "git+https://github.com/MarkSavkaIt/test-10-js.git"
   },
   "keywords": [],
   "author": "Alexander Repeta <alexander.repeta@gmail.com>",
